--- a/empleo_proj2/dbt_project.yml
+++ b/empleo_proj2/dbt_project.yml
@@ -32,7 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  empleo_proj:
+  empleo_proj2:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
